--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Christmas'
 - !lcc 'BV'
+- GITenberg
 title: A Wonderful Night; An Interpretation Of Christmas
 url: http://www.gutenberg.org/ebooks/14629
